# voidmon

./: .gitignore  Dockerfile  LICENSE  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
authy/: factories.py  forms.py  models.py
authy/migrations/: 0001_initial.py
authy/templates/account/: email_confirm.html  login.html  logout.html  verification_sent.html
core/: admin.py  constants.py  context_processors.py  entities.py  enums.py  factories.py  forms.py  mail.py  models.py  services.py  tasks.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_scanissue_severity_alter_scan_status_and_more.py  0003_scan_finished_at_scan_started_at_alter_scan_url.py  0004_alter_notificationsubscription_url_and_more.py  0005_scan_error.py  0006_alter_dynamicscanrequest_url_and_more.py
core/templates/core/: docs.html  index.html  messages.html  navbar.html  scan_detail.html  skeleton.html
core/templates/core/scan_issue_table/: message_column.html  severity_column.html
core/templatetags/: custom_tags.py
docs/: main.md
voidmon/: asgi.py  celery.py  urls.py  wsgi.py
voidmon/settings/: common.py  local.py  prod.py  test.py
